<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="8dp">
  <ImageView
      android:id="@+id/img_book"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/book"
      android:layout_weight="0.5"
      />
  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_weight="0.5"
      android:layout_margin="4dp">

    <TextView
        android:id="@+id/tv_book_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_title"
        android:layout_margin="4dp"
        />

    <TextView
        android:id="@+id/tv_book_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_author"
        android:layout_margin="4dp"
        />

    <TextView
        android:id="@+id/tv_book_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_price"
        android:layout_margin="4dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#eeff41"
        android:text="Buy"
        android:layout_margin="8dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#eeff41"
        android:layout_margin="8dp"
        android:text="Sample"/>


  </LinearLayout>



</LinearLayout>

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="File size:2.43MB"
      android:layout_marginBottom="40dp"/>

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/summary"
      android:textColor="#e65100"/>


  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="..."
      android:layout_marginBottom="12dp"
      />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="Related Books"
      android:layout_marginBottom="12dp"
      android:textColor="#e65100"
      />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="ဟာသအမ်ိဳးအစား စာအုပ္မ်ား"
      android:layout_marginBottom="12dp"
      android:textColor="#e65100"
      />

  <HorizontalScrollView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/book_1"
          />

      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/book_2"
          />
      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/book_3"
          />
      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/book_4"
          />
      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/book_5"
          />


    </LinearLayout>
  </HorizontalScrollView>







</LinearLayout>