<?xml version="1.0" encoding="utf-8"?>




    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
      >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/tree"
            />





        <ImageView
            android:id="@+id/ic_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_setting"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"

           />

        <ImageView
            android:id="@+id/ic_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search"
            android:layout_toLeftOf="@id/ic_setting"/>

        <ImageView
            android:id="@+id/ic_human"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_human"
            android:layout_toLeftOf="@id/ic_search"


            />

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/profile"
android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
             />

        <TextView
            android:id="@+id/tv_greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/greeting_message"
            android:textSize="24dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/img_profile"/>

        <TextView
            android:id="@+id/show_stories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_stories"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tv_greeting"/>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#FFFFFF"
        android:layout_margin="8dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/show_stories"
        android:layout_marginTop="8dp"
        android:padding="16dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Editor's pick"
            android:layout_marginBottom="4dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="..........."
            android:layout_marginBottom="4dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_title"
            android:textSize="22dp"
            android:layout_marginBottom="4dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Golden Ore/ 131 share"
            android:layout_marginBottom="4dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/china"
            android:scaleType="centerCrop"/>

</LinearLayout>


    </RelativeLayout>

